--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 </head>
 <body>
   <div class="login-container">
-    <h2>Oi, Vamos lá?</h2>
+    <h2>Caroline 💖</h2>
     <input type="text" id="username" placeholder="Usuário" autocomplete="off" />
     <input type="password" id="password" placeholder="Senha" autocomplete="off" />
     <button onclick="login()">Entrar</button>
@@ -208,12 +208,12 @@
   <img id="photo-2" src="img/Caroline1.png" alt="Foto 2" class="floating-photo" />
   <img id="photo-3" src="img/Caroline2.png" alt="Foto 3" class="floating-photo" />
   <img id="photo-4" src="img/Caroline3.png" alt="Foto 4" class="floating-photo" />
-  <img id="photo-5" src="img/Caroline4.png" alt="Foto 5" class="floating-photo" />
-  <img id="photo-6" src="img/Caroline4.png" alt="Foto 6" class="floating-photo" />
-  <img id="photo-7" src="img/Caroline4.png" alt="Foto 7" class="floating-photo" />
-  <img id="photo-8" src="img/Caroline4.png" alt="Foto 8" class="floating-photo" />
-  <img id="photo-9" src="img/Caroline4.png" alt="Foto 9" class="floating-photo" />
-  <img id="photo-10" src="img/Caroline4.png" alt="Foto 10" class="floating-photo" />
+  <img id="photo-5" src="img/Caroline3.png" alt="Foto 5" class="floating-photo" />
+  <img id="photo-6" src="img/Caroline3.png" alt="Foto 6" class="floating-photo" />
+  <img id="photo-7" src="img/Caroline3.png" alt="Foto 7" class="floating-photo" />
+  <img id="photo-8" src="img/Caroline3.png" alt="Foto 8" class="floating-photo" />
+  <img id="photo-9" src="img/Caroline3.png" alt="Foto 9" class="floating-photo" />
+  <img id="photo-10" src="img/Caroline3.png" alt="Foto 10" class="floating-photo" />
 
   <!-- Música de fundo -->
   <audio id="love-music" src="music/musica.mp3" loop></audio>
@@ -293,7 +293,7 @@
           startRomanticShow();
         }, 3000);
       } else {
-        alert("Usuário ou senha incorretos!");
+        alert("Ops! tenta de novo meu bem!");
       }
     }
 
