--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 
   <div id="welcome">Bem-vinda, Minha Futura Fisioterapeuta 💖</div>
   <div id="final-message">Você é especial para mim 💘</div>
-  <div id="end-message">Fim, espero que tenha gostado.</div>
+  <div id="end-message">TE VEJO SÁBADO, GATINHA!.</div>
 
   <!-- Fotos -->
   <img id="special-photo" src="img/Caroline.png" alt="Foto Especial" class="floating-photo" />
