--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 </head>
 <body>
   <div class="login-container">
-    <h2>Caroline Viana</h2>
+    <h2>Bem Vinda 💖</h2>
     <input type="text" id="username" placeholder="Usuário" autocomplete="off" />
     <input type="password" id="password" placeholder="Senha" autocomplete="off" />
     <button onclick="login()">Entrar</button>
@@ -202,7 +202,7 @@
 
   <div id="welcome">Bem-vinda, Minha Futura Fisioterapeuta 💖</div>
   <div id="final-message">Você é especial para mim 💘</div>
-  <div id="end-message"> <p> Espero que tenha Gostado! </p>Te vejo Sábado.</div>
+  <div id="end-message"> <p> Espero que tenha Gostado! </p>Te vejo Sábado, meu bem.💖</div>
 
   <!-- Fotos -->
   <img id="special-photo" src="img/Caroline.png" alt="Foto Especial" class="floating-photo" />
@@ -217,7 +217,7 @@
   <img id="photo-10" src="img/Caroline9.png" alt="Foto 10" class="floating-photo" />
 
   <!-- Música de fundo -->
-  <audio id="love-music" src="music/alianca.mp3" loop></audio>
+  <audio id="love-music" src="music/musica.mp3" loop></audio>
 
   <script>
     const messages = [
